// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component component :P Render a Component in the registry 1`] = `
<div>
  <div>
    this is the Toolbar component
  </div>
</div>
`;

exports[`Component component :P Render a Component in the registry using dependencies array 1`] = `
<div>
  <div>
    this is the Teaser component
  </div>
</div>
`;

exports[`Component component :P Renders a Component in the registry - passes props correctly 1`] = `
<div>
  <div>
    this is the Toolbar component with a prop 
    Hi!
     in it
  </div>
</div>
`;

exports[`Component component :P Renders a Fallback Component that does not exists in the registry 1`] = `<div />`;
